plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.newsletter'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// spring boot
	implementation 'org.springframework.boot:spring-boot-starter-validation'


	implementation 'org.springframework.boot:spring-boot-devtools:2.6.3'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.0'
	implementation 'org.springframework.security:spring-security-web:5.6.1'
	implementation 'org.springframework.security:spring-security-core:5.6.1'
	implementation 'org.springframework.security:spring-security-config:5.6.1'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.6.3'
	implementation 'org.springframework.hateoas:spring-hateoas:1.4.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.3'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	implementation 'mysql:mysql-connector-java:8.0.25'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'javax.activation:activation:1.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

	implementation 'org.projectlombok:lombok:1.18.22'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	implementation 'junit:junit:4.13.1'
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
	annotationProcessor "org.projectlombok:lombok:1.18.22"

	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava {
	options.compilerArgs += [
			'-Amapstruct.defaultComponentModel=spring'
	]
}
